--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,27 +1,26 @@
-{% set version = "1.1" %}
+{% set name = "setuptools_scm_git_archive" %}
+{% set version = "1.2" %}
 
 package:
-  name: setuptools_scm_git_archive
+  name: {{ name|lower }}
   version: {{ version }}
 
 source:
-  fn: setuptools_scm_git_archive-{{ version }}.tar.gz
-  url: https://pypi.python.org/packages/source/s/setuptools_scm_git_archive/setuptools_scm_git_archive-{{ version }}.tar.gz
-  sha256: 6026f61089b73fa1b5ee737e95314f41cb512609b393530385ed281d0b46c062
+  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/setuptools_scm_git_archive-{{ version }}.tar.gz
+  sha256: 92e8149c1f4a62fe170962b4ff8cb3d53bfa90fc944f1f1758cebaef56a67f13
 
 build:
-  number: 0
   noarch: python
-  script: "{{ PYTHON }} -m pip install . --no-deps --ignore-installed -vv "
+  script: {{ PYTHON }} -m pip install . -vv
+  number: 0
 
 requirements:
   host:
-    - python
     - pip
-    - setuptools
+    - python >=3.6
     - setuptools_scm
   run:
-    - python
+    - python >=3.6
     - setuptools_scm
 
 test:
@@ -35,9 +34,10 @@ about:
   license: MIT
   license_family: MIT
   license_file: LICENSE
-  summary: 'setuptools_scm plugin for git archives'
+  summary: setuptools_scm plugin for git archives
 
 extra:
   recipe-maintainers:
+    - thewchan
     - wesm
     - xhochy
