--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,12 +16,12 @@ build:
 
 requirements:
   host:
-    - python
+    - python >=3.6
     - pip
     - setuptools
     - setuptools_scm
   run:
-    - python
+    - python >=3.6
     - setuptools_scm
 
 test:
